# app.py
@@ -7,6 +7,8 @@ from hca.patients.patient_views import patients
 from hca.patients.patient_model import Patient, PatientClinicalDetail, Diagnosis, PatientDiagnosis
 from hca.providers.provider_views import providers
 from hca.providers.provider_model import Provider
+from hca.facilities.facility_views import facilities
+from hca.facilities.facility_model import Facility
 
 import config
 
@@ -34,6 +36,7 @@ def create_app():
 
     connex.app.register_blueprint(patients, url_prefix='/patients')
     connex.app.register_blueprint(providers, url_prefix='/providers')
+    connex.app.register_blueprint(facilities, url_prefix='/facilities')
     return connex
 
 
@@ -56,8 +59,15 @@ def setup_database(connex):
         pro.first_name = "Hannibal"
         pro.last_name = "Lecter"
         pro.provider_type = "Specialist"
-        pro.notes = "Not presently accepting new patients"
+        pro.notes = "Not presently accepting new patients."
         db.session.add(pro)
+        db.session.commit()
+
+        f = Facility()
+        f.name = "General Hospital"
+        f.facility_type = "Surgical Referral Center"
+        f.notes = "This hospital is too expensive."
+        db.session.add(f)
         db.session.commit()
 
         pcd = PatientClinicalDetail()
